Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Parent_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Guarantee</label>
    <type>Checkbox</type>
</CustomField>