Agentforce/force-app/main/default/objects/Bid_Support__c/fields/PCG_Actions__c.field-meta.xml
<CustomField>
    <fullName>PCG_Actions__c</fullName>
    <label>PCG Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>