Agentforce/force-app/main/default/objects/Bid_Support__c/fields/PCG_C__c.field-meta.xml
<CustomField>
    <fullName>PCG_C__c</fullName>
    <label>PCG Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>