Agentforce/force-app/main/default/objects/Bid_Support__c/fields/PCG_Mitigation_Measures__c.field-meta.xml
<CustomField>
    <fullName>PCG_Mitigation_Measures__c</fullName>
    <label>PCG Mitigation Measures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>