Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Pricing_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Manager_Email__c</fullName>
    <label>Pricing Manager [Email]</label>
    <type>Email</type>
</CustomField>