Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Pricing_Support__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support7</relationshipName>
    <type>Lookup</type>
</CustomField>