Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Pricing_Team_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Team_Feedback__c</fullName>
    <label>Pricing Team Feedback</label>
    <type>TextArea</type>
</CustomField>