Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Principal_Bid_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_Bid_Manager_Name__c</fullName>
    <label>Principal Bid Manager Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>