Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Proof_Reader__c.field-meta.xml
<CustomField>
    <fullName>Proof_Reader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proof Reader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support8</relationshipName>
    <type>Lookup</type>
</CustomField>