Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Proof_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_Reading_Date__c</fullName>
    <label>Proof Reading Date</label>
    <type>Date</type>
</CustomField>