Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>