Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Proposed_Systems__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Systems__c</fullName>
    <label>Proposed Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audim</fullName>
            </value>
            <value>
                <fullName>Epsys</fullName>
            </value>
            <value>
                <fullName>Kafoodle</fullName>
            </value>
            <value>
                <fullName>Maple</fullName>
            </value>
            <value>
                <fullName>MS365/PowerBi</fullName>
            </value>
            <value>
                <fullName>Servicetrac</fullName>
            </value>
            <value>
                <fullName>Telephony</fullName>
            </value>
            <value>
                <fullName>Teletrac Navman</fullName>
            </value>
            <value>
                <fullName>Timegate</fullName>
            </value>
            <value>
                <fullName>Trackforce Variant</fullName>
            </value>
            <value>
                <fullName>Visual Business Retail (VBR) - EPOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>