Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Qualitative_Reponse__c.field-meta.xml
<CustomField>
    <fullName>Qualitative_Reponse__c</fullName>
    <label>Qualitative Reponse</label>
    <type>TextArea</type>
</CustomField>