Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Reason_for_closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_closure__c</fullName>
    <description>AD-443 Create Bid Support Records</description>
    <label>Reason for Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Opportunity Lost</fullName>
            </value>
            <value>
                <fullName>Opportunity Withdrawn</fullName>
            </value>
            <value>
                <fullName>Bid Support Rejected</fullName>
                <isActive>false</isActive>
                <label>Bid Support Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>