Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <label>Received</label>
    <type>Date</type>
</CustomField>