Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Received_For_Review__c.field-meta.xml
<CustomField>
    <fullName>Received_For_Review__c</fullName>
    <label>Received For Review</label>
    <type>Date</type>
</CustomField>