Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Red_Team_Review__c.field-meta.xml
<CustomField>
    <fullName>Red_Team_Review__c</fullName>
    <label>Red Team Review</label>
    <type>Date</type>
</CustomField>