Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT( Opportunity__r.Owner.Region__c )</formula>
    <inlineHelpText>Opportunity Owner&apos;s Region</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>