Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Request_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Approval</label>
    <type>Checkbox</type>
</CustomField>