Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <label>Requested</label>
    <type>Date</type>
</CustomField>