Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <label>Requirements</label>
    <type>TextArea</type>
</CustomField>