Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Result_Date__c.field-meta.xml
<CustomField>
    <fullName>Result_Date__c</fullName>
    <label>Result Date</label>
    <type>Date</type>
</CustomField>