Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Review_Outcome__c</fullName>
    <label>Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>