Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Review_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Start_Date__c</fullName>
    <inlineHelpText>The date the Bid Support entered Review Status</inlineHelpText>
    <label>Review Start Date</label>
    <type>Date</type>
</CustomField>