Agentforce/force-app/main/default/objects/Bid_Support__c/fields/RFI_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>RFI_Supported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Supported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support5</relationshipName>
    <type>Lookup</type>
</CustomField>