Agentforce/force-app/main/default/objects/Bid_Support__c/fields/RFP_Result__c.field-meta.xml
<CustomField>
    <fullName>RFP_Result__c</fullName>
    <label>RFP Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Verbal Award</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>