Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Risk10__c.field-meta.xml
<CustomField>
    <fullName>Risk10__c</fullName>
    <description>Risk 10- Data Dictionary Consolidation</description>
    <label>Risk 10</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>