Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Risk1__c.field-meta.xml
<CustomField>
    <fullName>Risk1__c</fullName>
    <description>Risk 1- Data Dictionary Consolidation</description>
    <label>Risk 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>