Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Risk2__c.field-meta.xml
<CustomField>
    <fullName>Risk2__c</fullName>
    <description>Risk 2- Data Dictionary Consolidation</description>
    <label>Risk 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>