Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support9</relationshipName>
    <type>Lookup</type>
</CustomField>