Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Sales_Lead_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead_Approval__c</fullName>
    <label>Sales Lead Approval</label>
    <type>Date</type>
</CustomField>