Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Sales_Lead_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead_Approval_Status__c</fullName>
    <defaultValue>&quot;Not Submitted&quot;</defaultValue>
    <label>Sales Lead Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>