Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Seller_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Seller_Feedback__c</fullName>
    <label>Seller Feedback</label>
    <type>TextArea</type>
</CustomField>