Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Seller_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Seller_Review_Date__c</fullName>
    <label>Seller Review Date</label>
    <type>Date</type>
</CustomField>