Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Sharepoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_URL__c</fullName>
    <label>SharePoint URL</label>
    <type>Url</type>
</CustomField>