Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Solution_Approval__c.field-meta.xml
<CustomField>
    <fullName>Solution_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support6</relationshipName>
    <type>Lookup</type>
</CustomField>