Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Solution_Diagram__c.field-meta.xml
<CustomField>
    <fullName>Solution_Diagram__c</fullName>
    <label>Solution Diagram</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>