Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AD-443 Create Bid Support Records</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource Allocation</fullName>
                <default>true</default>
                <label>Resource Allocation</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Awaiting Design</fullName>
                <isActive>false</isActive>
                <label>Awaiting Design</label>
            </value>
            <value>
                <fullName>Awaiting Legal</fullName>
                <isActive>false</isActive>
                <label>Awaiting Legal</label>
            </value>
            <value>
                <fullName>Awaiting Pricing</fullName>
                <isActive>false</isActive>
                <label>Awaiting Pricing</label>
            </value>
            <value>
                <fullName>Bid / No Bid</fullName>
                <isActive>false</isActive>
                <label>Bid / No Bid</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <isActive>false</isActive>
                <label>In Review</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Pending Assignment</fullName>
                <isActive>false</isActive>
                <label>Pending Assignment</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <isActive>false</isActive>
                <label>Under Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>