Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Storyboard_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Storyboard_Meeting__c</fullName>
    <label>Storyboard Meeting</label>
    <type>Date</type>
</CustomField>