Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>AD-451 Parent Guarantees</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>