Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Submission_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Submission_Instruction__c</fullName>
    <label>Submission Instruction</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>