Agentforce/force-app/main/default/objects/Bid_Support__c/fields/System_Owned_by_Queue__c.field-meta.xml
<CustomField>
    <fullName>System_Owned_by_Queue__c</fullName>
    <formula>IF(Owner:User.Username = &quot;&quot;,TRUE,FALSE)</formula>
    <inlineHelpText>System field. Ticked if record owned by Queue</inlineHelpText>
    <label>System: Owned by Queue</label>
    <type>Checkbox</type>
</CustomField>