Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Technical_Expert_Email__c.field-meta.xml
<CustomField>
    <fullName>Technical_Expert_Email__c</fullName>
    <label>Technical Expert [Email]</label>
    <type>Email</type>
</CustomField>