Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Timegate_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Timegate_Picklist__c</fullName>
    <label>Timegate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee App</fullName>
            </value>
            <value>
                <fullName>Employee Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>