Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Tork_Vision_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Tork_Vision_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tork Vision Cleaning</label>
    <type>Checkbox</type>
</CustomField>