Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Tork_Vision_Cleaning_Text__c.field-meta.xml
<CustomField>
    <fullName>Tork_Vision_Cleaning_Text__c</fullName>
    <label>Tork Vision Cleaning</label>
    <type>TextArea</type>
</CustomField>