Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Trackforce_Valiant__c.field-meta.xml
<CustomField>
    <fullName>Trackforce_Valiant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trackforce Valiant</label>
    <type>Checkbox</type>
</CustomField>