Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Trackforce_Valiant_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Trackforce_Valiant_Picklist__c</fullName>
    <label>Trackforce Valiant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post (Desktop Application)</fullName>
            </value>
            <value>
                <fullName>Trackforce mPost (Mobile Application)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>