Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>AD-443 Create Bid Support Records</description>
    <label>Type DEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro Pack</fullName>
            </value>
            <value>
                <fullName>Generic Proposal</fullName>
            </value>
            <value>
                <fullName>Generic Presentation</fullName>
            </value>
            <value>
                <fullName>Risk Analysis</fullName>
            </value>
            <value>
                <fullName>Contract Variation</fullName>
            </value>
            <value>
                <fullName>Quotation</fullName>
            </value>
            <value>
                <fullName>Commercial Offer</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Other (Generic Types)</fullName>
            </value>
            <value>
                <fullName>Bid Management</fullName>
                <isActive>false</isActive>
                <label>Bid Management</label>
            </value>
            <value>
                <fullName>IT Requirements</fullName>
                <isActive>false</isActive>
                <label>IT Requirements</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <isActive>false</isActive>
                <label>Legal</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
                <isActive>false</isActive>
                <label>Pricing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>