Agentforce/force-app/main/default/objects/Bid_Support__c/recordTypes/Design.recordType-meta.xml
<RecordType>
    <fullName>Design</fullName>
    <active>true</active>
    <label>Design</label>
</RecordType>