Agentforce/force-app/main/default/objects/Bid_Support__c/recordTypes/IT_Requirements.recordType-meta.xml
<RecordType>
    <fullName>IT_Requirements</fullName>
    <active>false</active>
    <label>IT Requirements</label>
</RecordType>