Agentforce/force-app/main/default/objects/Bid_Support__c/recordTypes/Legal.recordType-meta.xml
<RecordType>
    <fullName>Legal</fullName>
    <active>true</active>
    <label>Legal</label>
</RecordType>