Agentforce/force-app/main/default/objects/Bid_Support__c/recordTypes/Pricing.recordType-meta.xml
<RecordType>
    <fullName>Pricing</fullName>
    <active>true</active>
    <label>Pricing</label>
</RecordType>