Agentforce/force-app/main/default/objects/Bid_Support__c/validationRules/Close_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Validation</fullName>
    <active>true</active>
    <description>Close Date must be within 30 days past and 7 days future.</description>
    <errorConditionFormula>AND(
				 $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
				ISPICKVAL(Status__c, &quot;Closed&quot;),
				ISCHANGED(Status__c),
				OR(
								Closed_Date__c &gt; TODAY() + 7,
								Closed_Date__c &lt; TODAY() - 30
							)
				)</errorConditionFormula>
    <errorDisplayField>Closed_Date__c</errorDisplayField>
    <errorMessage>Close Date must be within the last 30 days and can be no more than 7 days in the future.</errorMessage>
</ValidationRule>