Agentforce/force-app/main/default/objects/Bid_Support__c/validationRules/Due_Date_After_Phase_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_After_Phase_Start_Date</fullName>
    <active>true</active>
    <description>Due Date must be after Phase Start Date</description>
    <errorConditionFormula>AND(
				 $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
				 NOT(ISBLANK(Bid_Phase__c)),
					Due_Date__c &lt; Bid_Phase__r.Start_Date__c
				)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be before the Start Date of the linked Phase.</errorMessage>
</ValidationRule>