Agentforce/force-app/main/default/objects/Bid_Support__c/listViews/Active_Bid_Supports.listView-meta.xml
<ListView>
    <fullName>Active_Bid_Supports</fullName>
    <columns>NAME</columns>
    <columns>Bid__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Bid_Team__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Bid_Phase_Formula__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Bid Supports</label>
</ListView>