Agentforce/force-app/main/default/objects/Bid_Support__c/listViews/All_Bid_Supports.listView-meta.xml
<ListView>
    <fullName>All_Bid_Supports</fullName>
    <columns>NAME</columns>
    <columns>Bid__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Bid_Team__c</columns>
    <columns>Bid_Phase_Formula__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Bid Supports</label>
</ListView>