Agentforce/force-app/main/default/objects/Bid_Support__c/listViews/My_Bid_Supports.listView-meta.xml
<ListView>
    <fullName>My_Bid_Supports</fullName>
    <columns>NAME</columns>
    <columns>Bid__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Bid_Phase_Formula__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Bid Supports</label>
</ListView>