Agentforce/force-app/main/default/objects/Bid_Support__c/listViews/Private_Assigned_Pending_Bid_Supports.listView-meta.xml
<ListView>
    <fullName>Private_Assigned_Pending_Bid_Supports</fullName>
    <columns>NAME</columns>
    <columns>Bid__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Bid_Team__c</columns>
    <columns>Bid_Phase_Formula__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Resource Allocation</value>
    </filters>
    <filters>
        <field>System_Owned_by_Queue__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Bid_Team__c</field>
        <operation>equals</operation>
        <value>Private</value>
    </filters>
    <label>Private - Assigned, Pending Bid Supports</label>
</ListView>